--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="es">
     <link rel="stylesheet" href="/style/index.css">
     <head>
         <meta charset="UTF-8">
