Bottones i ajuste del texto inicial

--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcConvert</title>
+    <link rel="icon" href="/img/conv.png">
 </head>
 <header>
-    <h1 style="font-size: 50px;">CalcConvert</h1>
+    <img src="/img/logoN.png" alt="CalcConvert" style="width: 75px; height: 75px; position: absolute; left: 10px;">
+    <h1 style="font-size: 50px; text-align: center;">CalcConvert</h1>
 </header>
 <body>
-    <div class="inicio">
-        <h1>
-            Bienvenido a CalcConvert
-        </h1>
-    </div>
     <div class="containers">
         <div class="containerbutton">
-            <a href="templates/calc.html" class="calc"></a>
-            <a href="templates/calc.html" class="conv"></a>
+            <a href="templates/calc.html" class="calc">Calculadora</a>
+            <a href="templates/conv.html" class="conv">Conversor</a>
         </div>
         <div href="templates/calc.html" class="containerinfo">
-            <div>
+            <div style="padding: 30px;">
                 <p>El sitio web CalcConvert es una herramienta integral diseñada para proporcionar dos servicios principales:</p>
                 <p>La calculadora que está diseñada para ser intuitiva y fácil de usar, con una interfaz que imita la disposición de una calculadora física. Los usuarios pueden introducir números y seleccionar la operación deseada, y la calculadora mostrará el resultado de la operación de inmediato.</p>
                 <p>El conversor que está diseñado para ser extremadamente fácil de usar, el usuario simplemente selecciona la unidad de origen y la unidad de destino, introduce el valor que desea convertir, y el conversor proporciona el resultado de manera inmediata.</p>
