cuadros de texto y logos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcConvert</title>
-    <link rel="icon" href="/img/conv.png">
+    <link rel="icon" href="/img/logoB.png">
 </head>
 <header>
     <img src="/img/logoN.png" alt="CalcConvert" style="width: 75px; height: 75px; position: absolute; left: 10px;">
@@ -25,37 +25,80 @@
             </div>
         </div>
     </div>
-    <div class="info">
-        <ol style="padding: 1%;">
-            <h3>Funcionalidad de la Calculadora</h3>
-            <p>La primera funcionalidad que ofrece "CalcConvert" es la de una calculadora básica. Esta herramienta está destinada a ayudar a los usuarios a realizar operaciones matemáticas simples de manera rápida y eficiente. Las operaciones que se pueden realizar incluyen:</p>
+    <div class="bodyinfo">
+        <img class="img" src="/img/calcbtn.png" alt="CalcConvert">
+        <div class="info">
+            <h1>Funcionalidad de la Calculadora</h1>
+            <p>La primera y fundamental funcionalidad que ofrece CalcConvert es la de una calculadora básica. Esta herramienta está diseñada para asistir a los usuarios en la realización de operaciones matemáticas simples, de una manera rápida y eficiente. A continuación, se detallan las principales operaciones que se pueden realizar con esta calculadora y su importancia:</p>
+            <h3>Suma</h3>
+            <p>La operación de suma permite agregar dos o más números para obtener un total. Esta función es fundamental en numerosas aplicaciones cotidianas y profesionales, desde sumar precios de artículos en una compra hasta calcular el total de horas trabajadas en un proyecto. Por ejemplo, si queremos sumar 15, 23 y 9, la calculadora nos proporcionará el resultado 47.</p>
+            <h3>Resta</h3>
+            <p>La operación de resta permite sustraer un número de otro. Es especialmente útil para calcular diferencias, como determinar cuánto dinero queda después de una compra, o cuántos días restan hasta una fecha específica. Si necesitamos restar 8 de 20, la calculadora nos dará el resultado 12.La operación de división permite dividir un número entre otro, obteniendo así el cociente. Esta operación es crucial para determinar cuántas veces un número está contenido en otro, como en la división de cuentas, la distribución equitativa de recursos, o en la conversión de unidades. Por ejemplo, si dividimos 36 entre 6, la calculadora nos dará el resultado 6.</p>
+            <h3>Multiplicación</h3>
+            <p>La operación de multiplicación permite encontrar el producto de dos o más números. Esta función es esencial en situaciones como calcular el costo total de artículos idénticos (por ejemplo, 5 artículos a $7 cada uno), o en situaciones más complejas como la multiplicación de matrices en matemáticas avanzadas. Multiplicando 4 por 6, obtendremos 24 como resultado.</p>
+            <h3>División</h3>
+            <p>La operación de división permite dividir un número entre otro, obteniendo así el cociente. Esta operación es crucial para determinar cuántas veces un número está contenido en otro, como en la división de cuentas, la distribución equitativa de recursos, o en la conversión de unidades. Por ejemplo, si dividimos 36 entre 6, la calculadora nos dará el resultado 6.</p>
+            <ol>
+                <h3>Ventajas de la Calculadora Básica de CalcConvert</h3>
+                <li>Rapidez y Eficiencia: Permite realizar cálculos de manera inmediata, ahorrando tiempo en tareas que de otra forma podrían ser tediosas y propensas a errores.</li>
+                <li>Precisión: Garantiza resultados exactos, minimizando el margen de error común en cálculos manuales.</li>
+                <li>Accesibilidad: Disponible para cualquier usuario, sin necesidad de conocimientos avanzados en matemáticas.</li>
+                <li>Versatilidad: Abarca una amplia gama de situaciones cotidianas y profesionales, desde finanzas personales hasta aplicaciones educativas.</li>
+            </ol>
+        </div>
+    </div>
+    <div class="bodyinfo">
+        <div class="info">
+            <h1>Funcionalidad del Conversor de Unidades</h1>
+            <p>La segunda funcionalidad principal de "CalcConvert" es el conversor de unidades. Esta herramienta es extremadamente útil para personas que necesitan convertir medidas entre diferentes sistemas de unidades, ya sea en contextos académicos, laborales o cotidianos. A continuación, se detallan las principales categorías de conversiones disponibles y su importancia:</p>
+            <h3>Longitud</h3>
+            <p>La conversión de unidades de longitud permite convertir entre diferentes sistemas de medición, como metros, centímetros, milímetros, pulgadas, pies y yardas. Esta función es esencial en campos como la ingeniería, la construcción, la ciencia y la vida diaria. Por ejemplo, convertir metros a centímetros (1 metro = 100 centímetros) facilita la comprensión y aplicación de medidas en proyectos de diseño y construcción. De manera similar, convertir pies a metros ayuda en la traducción de medidas utilizadas en diferentes regiones del mundo.</p>
+            <h3>Peso</h3>
+            <p>La conversión de unidades de peso permite transformar medidas entre kilogramos, gramos, miligramos, libras y onzas. Esta capacidad es crucial en industrias como la farmacéutica, la alimentación y la logística, donde la precisión en las medidas es vital. Por ejemplo, convertir kilogramos a libras (1 kilogramo ≈ 2.20462 libras) es común en la importación y exportación de productos, mientras que convertir gramos a onzas puede ser necesario en recetas de cocina internacional.</p>
+            <h3>Temperatura</h3>
+            <p>La conversión de unidades de temperatura permite cambiar entre escalas como Celsius, Fahrenheit y Kelvin. Esta función es indispensable en la ciencia, la meteorología y la vida diaria. Por ejemplo, convertir grados Celsius a Fahrenheit (°C a °F) utilizando la fórmula °F = °C × 9/5 + 32 es útil para interpretar previsiones meteorológicas en países que utilizan diferentes escalas de temperatura. Asimismo, convertir grados Fahrenheit a Celsius (°F a °C) usando la fórmula °C = (°F - 32) × 5/9 es esencial para la precisión en experimentos científicos.</p>
+            <h3>Moneda</h3>
+            <p>La conversión de moneda permite convertir valores entre diferentes divisas, como dólares, euros, libras esterlinas, yenes y muchas más. Esta función es crucial para viajeros, negocios internacionales y cualquier persona que necesite conocer el valor equivalente de una cantidad de dinero en otra moneda. Por ejemplo, convertir dólares a euros (1 USD ≈ 0.85 EUR) puede ser necesario para planificar un viaje a Europa, mientras que convertir yenes a libras esterlinas (1000 JPY ≈ 6.5 GBP) puede ser relevante para transacciones comerciales.</p>
+            <ol>
+                <h3>Ventajas del Conversor Básica de CalcConvert</h3>
+                <li>Universalidad: Soporta una amplia gama de unidades y sistemas de medición, así como diferentes monedas, lo que lo hace aplicable en diversas disciplinas y regiones.</li>
+                <li>Precisión: Ofrece conversiones exactas, reduciendo el margen de error en cálculos manuales.</li>
+                <li>Conveniencia: Facilita la rápida obtención de equivalencias entre unidades y monedas, ahorrando tiempo en tareas que requieren precisión en las medidas y los valores.</li>
+                <li>Accesibilidad: Es fácil de usar, independientemente del nivel de conocimiento técnico del usuario.</li>
+            </ol>
+        </div>
+        <img class="img" src="/img/convbtn.png" alt="CalcConvert">
+    </div>
+    <div class="bodyinfo">
+        <img class="img" src="/img/benefits.png" alt="CalcConvert">
+        <div class="info">
+            <h1>Beneficios de Usar CalcConvert</h1>
+            <h3>Ahorro de Tiempo</h3>
+            <p>Realizar cálculos y conversiones manualmente puede ser un proceso tedioso y propenso a errores. CalcConvert automatiza estas tareas, proporcionando resultados rápidos y precisos. Esto permite a los usuarios enfocarse en otras tareas importantes sin preocuparse por la exactitud de sus cálculos y conversiones.</p>
+            <h3>Facilidad de Uso</h3>
+            <p>La interfaz de usuario de CalcConvert es sencilla e intuitiva, lo que permite que personas de todas las edades y niveles de habilidad técnica puedan utilizar la herramienta sin dificultad. Su diseño amigable asegura que los usuarios puedan acceder rápidamente a las funciones que necesitan sin necesidad de una curva de aprendizaje empinada.</p>
+            <h3>Precisión</h3>
+            <p>Los cálculos y conversiones realizados por CalcConvert son precisos, lo que es crucial en contextos como la educación, la ciencia, la ingeniería y las finanzas. La precisión en estos ámbitos es vital para evitar errores costosos y garantizar resultados confiables.</p>
+            <h3>Versatilidad</h3>
+            <p>Al combinar una calculadora y un conversor de unidades en una sola plataforma, CalcConvert ofrece una solución versátil que puede satisfacer múltiples necesidades en un solo lugar. Ya sea para realizar operaciones matemáticas básicas, convertir unidades de medida o cambiar divisas, CalcConvert proporciona una herramienta todo-en-uno eficiente y práctica.</p>
+        </div>
+    </div>
+    <div class="bodyinfo">
+        <div class="info">
+            <h1>Principales Beneficiados de CalcConvert</h1>
+            <h3>Estudiantes</h3>
+            <p>Los estudiantes pueden utilizar CalcConvert para resolver problemas matemáticos básicos con la calculadora, facilitando la comprensión y práctica de conceptos aritméticos. Además, el conversor de unidades es invaluable en clases de física o química, donde es común trabajar con diferentes sistemas de unidades. Por ejemplo, un estudiante puede necesitar convertir metros a centímetros o grados Celsius a Kelvin para completar tareas y experimentos con precisión.</p>
+            <h3>Profesionales</h3>
+            <p>Ingenieros, científicos y otros profesionales pueden beneficiarse enormemente del conversor de unidades de CalcConvert para asegurar que sus medidas y cálculos sean precisos, independientemente del sistema de unidades que se esté utilizando. La capacidad de convertir entre unidades de longitud, peso, temperatura y más es esencial en estos campos para garantizar la exactitud y confiabilidad de los resultados, ya sea en el diseño de un proyecto de ingeniería, en experimentos científicos o en análisis de datos.</p>
+            <h3>Hogar y Vida Diaria</h3>
+            <p>Cualquier persona puede necesitar convertir unidades en su vida diaria. CalcConvert facilita tareas cotidianas como:</p>
             <ul>
-                <li>Suma: Permite agregar dos o más números.</li>
-                <li>Resta: Permite restar un número de otro.</li>
-                <li>Multiplicación: Permite multiplicar dos o más números.</li>
-                <li>División: Permite dividir un número entre otro.</li>
+                <li>Cocinar: Convertir gramos a onzas o mililitros a tazas para seguir recetas internacionales.</li>
+                <li>Hacer ejercicio: Convertir millas a kilómetros para seguir un plan de entrenamiento que utiliza un sistema de unidades diferente.</li>
+                <li>Información general: Convertir grados Celsius a Fahrenheit para entender mejor las previsiones meteorológicas en distintos países o regiones.</li>
             </ul>
-            <h3>Funcionalidad del Conversor de Unidades</h3>
-            <p>La segunda funcionalidad principal de "CalcConvert" es el conversor de unidades. Esta herramienta es extremadamente útil para personas que necesitan convertir medidas entre diferentes sistemas de unidades, ya sea en contextos académicos, laborales, o cotidianos. Las conversiones disponibles incluyen, pero no se limitan a, las siguientes categorías:</p>
-            <ul>
-                <li>Longitud: Permite convertir entre diferentes unidades de longitud como metros, centímetros, milímetros, pulgadas, pies, y yardas. Por ejemplo, convertir metros a centímetros (1 metro = 100 centímetros) o pies a metros.</li>
-                <li>Peso: Permite convertir entre unidades de peso como kilogramos, gramos, miligramos, libras y onzas. Por ejemplo, convertir kilogramos a libras (1 kilogramo ≈ 2.20462 libras) o gramos a onzas.</li>
-                <li>Temperatura: Permite convertir entre diferentes escalas de temperatura como Celsius, Fahrenheit y Kelvin. Por ejemplo, convertir grados Celsius a Fahrenheit (°C a °F) utilizando la fórmula °F = °C × 9/5 + 32, o convertir grados Fahrenheit a Celsius (°F a °C) usando la fórmula °C = (°F - 32) × 5/9.</li>
-            </ul>
-            <h3>Beneficios de Usar CalcConvert</h3>
-            <ul>
-                <li>Ahorro de Tiempo: Realizar cálculos y conversiones manualmente puede ser un proceso tedioso y propenso a errores. CalcConvert automatiza estas tareas, proporcionando resultados rápidos y precisos.</li>
-                <li>Facilidad de Uso: La interfaz de usuario es sencilla e intuitiva, lo que permite que personas de todas las edades y niveles de habilidad técnica puedan utilizar la herramienta sin dificultad.</li>
-                <li>Precisión: Los cálculos y conversiones realizados por CalcConvert son precisos, lo que es crucial en contextos como la educación, la ciencia, la ingeniería y las finanzas.</li>
-                <li>Versatilidad: Al combinar una calculadora y un conversor de unidades en una sola plataforma, CalcConvert ofrece una solución versátil que puede satisfacer múltiples necesidades en un solo lugar.</li>
-            </ul>
-            <h3>Principales beneficiados</h3>
-            <ul>
-                <li>Estudiantes: Un estudiante puede usar la calculadora para resolver problemas matemáticos básicos y el conversor de unidades para tareas en clases de física o química.</li>
-                <li>Profesionales: Ingenieros, científicos y otros profesionales pueden utilizar el conversor de unidades para asegurar que sus medidas y cálculos sean precisos, independientemente del sistema de unidades que se esté utilizando.</li>
-                <li>Hogar y Vida Diaria: Cualquier persona puede necesitar convertir unidades en su vida diaria, ya sea para cocinar (convertir gramos a onzas), hacer ejercicio (convertir millas a kilómetros), o simplemente para satisfacer su curiosidad (convertir grados Celsius a Fahrenheit).</li>
-            </ul>
-        </ol>
+        </div>
+        <img class="img" src="/img/beneficiado.png" alt="CalcConvert">
     </div>
 </body>
 <footer>
