--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
     </div>
 </body>
 <footer>
-    <p>Created by:</p>
-    <a class="github" href="https://github.com/Eriquito00">Eriquito00</a>
+    <a href="https://github.com/Eriquito00">
+        <img class="imgGH" src="/img/github.png" alt="CalcConvert">
+    </a>
+    <p class="github">Created by: Eriquito00</p>
 </footer>
 </html>
