--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="stylesheet" href="/style/index.css">
-<link rel="stylesheet" href="/style/style.css">
+<link rel="stylesheet" href="./style/index.css">
+<link rel="stylesheet" href="./style/style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcConvert</title>
-    <link rel="icon" href="/img/logoB.png">
+    <link rel="icon" href="./img/logoB.png">
 </head>
 <header>
-    <img src="/img/logoN.png" alt="CalcConvert" style="width: 75px; height: 75px; position: absolute; left: 10px;">
+    <img src="./img/logoN.png" alt="CalcConvert" style="width: 75px; height: 75px; position: absolute; left: 10px;">
     <h1 style="font-size: 50px; text-align: center;">CalcConvert</h1>
 </header>
 <body>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="bodyinfo">
-        <img class="img" src="/img/calcbtn.png" alt="CalcConvert">
+        <img class="img" src="./img/calcbtn.png" alt="CalcConvert">
         <div class="info">
             <h1>Funcionalidad de la Calculadora</h1>
             <p>La primera y fundamental funcionalidad que ofrece CalcConvert es la de una calculadora básica. Esta herramienta está diseñada para asistir a los usuarios en la realización de operaciones matemáticas simples, de una manera rápida y eficiente. A continuación, se detallan las principales operaciones que se pueden realizar con esta calculadora y su importancia:</p>
@@ -68,10 +68,10 @@
                 <li>Accesibilidad: Es fácil de usar, independientemente del nivel de conocimiento técnico del usuario.</li>
             </ol>
         </div>
-        <img class="img" src="/img/convbtn.png" alt="CalcConvert">
+        <img class="img" src="./img/convbtn.png" alt="CalcConvert">
     </div>
     <div class="bodyinfo">
-        <img class="img" src="/img/benefits.png" alt="CalcConvert">
+        <img class="img" src="./img/benefits.png" alt="CalcConvert">
         <div class="info">
             <h1>Beneficios de Usar CalcConvert</h1>
             <h3>Ahorro de Tiempo</h3>
@@ -99,12 +99,12 @@
                 <li>Información general: Convertir grados Celsius a Fahrenheit para entender mejor las previsiones meteorológicas en distintos países o regiones.</li>
             </ul>
         </div>
-        <img class="img" src="/img/beneficiado.png" alt="CalcConvert">
+        <img class="img" src="./img/beneficiado.png" alt="CalcConvert">
     </div>
 </body>
 <footer>
     <a href="https://github.com/Eriquito00">
-        <img class="imgGH" src="/img/github.png" alt="CalcConvert">
+        <img class="imgGH" src="./img/github.png" alt="CalcConvert">
     </a>
     <p class="github">Created by: Eriquito00</p>
 </footer>
